--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,16 @@
-.container {
-  color: blue;
+.wrapper {
+  max-width: 600px;
+  margin: 30px auto;
+  padding: 20px;
+  border: 1px solid;
+  border-radius: 5px;
+}
+ul {
+  margin: 0;
+  padding: 0;
+}
+li {
+  list-style: none;
+  margin: 0;
+  padding: 0;
 }
