--- a/src/style.css
+++ b/src/style.css
@@ -2,8 +2,12 @@
   max-width: 600px;
   margin: 30px auto;
   padding: 20px;
+  color: #787d80;
   border: 1px solid;
-  border-radius: 5px;
+  border-radius: 10px;
+  border-color: #ace0f9;
+  background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
+  font-family: "Montserrat Alternates", sans-serif;
 }
 ul {
   margin: 0;
@@ -13,4 +17,48 @@ li {
   list-style: none;
   margin: 0;
   padding: 0;
+}
+#search-btn {
+  margin-left: 0 auto;
+  padding: 10px;
+}
+
+#right-side {
+  padding: 10px;
+  font-size: 25px;
+  text-transform: capitalize;
+}
+
+#left-side {
+  padding: 5px;
+  text-align: right;
+  font-size: 15px;
+}
+
+#forecast {
+  margin: 0 auto;
+  text-align: center;
+  font-size: 20px;
+}
+.units {
+  font-size: 15px;
+}
+
+#celsius-link {
+  text-decoration: none;
+  color: #9ca2a7;
+}
+#celsius-link:hover {
+  text-decoration: underline;
+}
+
+#fahrenheit-link {
+  text-decoration: none;
+  color: #9ca2a7;
+}
+#fahrenheit-link:hover {
+  text-decoration: underline;
+}
+#lowercase {
+  text-transform: lowercase;
 }
