--- a/src/style.css
+++ b/src/style.css
@@ -22,6 +22,22 @@ li {
   font-size: 15px;
 }
 
+.units .active {
+  color: #171718;
+  text-decoration: underline;
+}
+
+.units .active:hover {
+  text-decoration: none;
+}
+
+#fahrenheit-link {
+  text-decoration: none;
+}
+#celsius-link {
+  text-decoration: none;
+}
+
 #search-btn {
   margin-left: 0 auto;
   padding: 10px;
@@ -47,20 +63,4 @@ li {
 
 #lowercase {
   text-transform: lowercase;
-}
-
-#celsius-link {
-  text-decoration: none;
-  color: #9ca2a7;
-}
-#celsius-link:hover {
-  text-decoration: underline;
-}
-
-#fahrenheit-link {
-  text-decoration: none;
-  color: #9ca2a7;
-}
-#fahrenheit-link:hover {
-  text-decoration: underline;
 }
