--- a/src/style.css
+++ b/src/style.css
@@ -54,11 +54,15 @@ li {
   text-align: right;
   font-size: 15px;
 }
+#title {
+  text-align: center;
+  padding: 5px;
+}
 
 #forecast {
   margin: 0 auto;
   text-align: center;
-  font-size: 20px;
+  font-size: 15px;
 }
 
 #lowercase {
