--- a/src/style.css
+++ b/src/style.css
@@ -1,3 +1,7 @@
+.weather-app {
+  margin: 0 auto;
+  text-align: center;
+}
 .wrapper {
   max-width: 600px;
   margin: 30px auto;
@@ -9,7 +13,7 @@
   background-image: linear-gradient(to top, #fff1eb 0%, #ace0f9 100%);
   font-family: "Montserrat Alternates", sans-serif;
 }
-ul {
+. ul {
   margin: 0;
   padding: 0;
 }
@@ -41,6 +45,7 @@ li {
 #search-btn {
   margin-left: 0 auto;
   padding: 10px;
+  width: ;
 }
 
 #right-side {
